[gd_scene load_steps=7 format=3 uid="uid://dt07gpcm3l2ph"]

[ext_resource type="Script" path="res://Player.gd" id="1_qu1fe"]
[ext_resource type="AudioStream" uid="uid://dal7j2sbhgfiy" path="res://Audio/Win sound.wav" id="2_m04d6"]
[ext_resource type="AudioStream" uid="uid://htindjmgc04p" path="res://Audio/lose sound 1_0.wav" id="3_nrkt8"]
[ext_resource type="AudioStream" uid="uid://bptc2smg7hcyf" path="res://Audio/enginehum3.ogg" id="4_u602m"]

[sub_resource type="CylinderMesh" id="CylinderMesh_cgnm2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vljhi"]

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_qu1fe")
thrust = 2803.69
torque_thrust = 500.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_cgnm2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_vljhi")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_nrkt8")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_m04d6")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_u602m")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
